--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -1,9 +1,9 @@
 on: [push]
 
 jobs:
-  test_version:
+  test_multiple_queries:
     runs-on: ubuntu-latest
-    name: Test Function Queries
+    name: Test Function Multiple Queries
     env:
       DB_VERSION: '5.20.1'
     steps:
@@ -32,3 +32,27 @@ jobs:
       - name: Waiting Query Validation
         run: |
           ${{contains(steps.run_queries.outputs.queries_results, 'waited 1 seconds')}}
+
+  test_matrix_query:
+    runs-on: ubuntu-latest
+    name: Test Matrix Multiple Queries
+    strategy:
+      matrix: 
+        sleep: [1, 2, 3]
+    steps:
+      # Run Queries
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Run Queries
+        uses: ./
+        id: run_queries
+        with:
+          snowflake_account: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+          snowflake_warehouse: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+          snowflake_username: ${{ secrets.SNOWFLAKE_USER }}
+          snowflake_password: ${{ secrets.SNOWFLAKE_PASSWORD }}
+          queries: 'call system$wait(${{matrix.sleep}})'
+
+      - name: Waiting Query Validation
+        run: |
+          ${{contains(steps.run_queries.outputs.queries_results, 'waited matrix.sleep seconds')}}
