--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ isodate==0.6.1
 jmespath==1.0.1
 msrest==0.7.1
 oauthlib==3.2.2
-oscrypto==1.3.0
+oscrypto @ git+https://github.com/wbond/oscrypto.git@1547f53
 pycparser==2.21
 pycryptodomex==3.19.0
 PyJWT==2.8.0
